# VecturaFlow

./: .aiignore  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.lambda  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.lambda.txt  requirements.runtime.txt  requirements.txt  vecturaflow_viz.jsx
.ai/: CHANGELOG-AI.md  CONTEXT.md  DECISIONS.md  MEMORY.md  deps.md  hotspots.txt  manifest.sh  recent-commits.txt  switch-guard.sh  tree.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
api/: agent.py  config.py  dependencies.py  logger.py  main.py  observability.py  rate_limit.py  retriever.py  schemas.py
docs/: API.md  ARCHITECTURE.md  HEALTH_CHECK.md  OPERATIONS.md  PRD.md  RUN_LOG.md  TROUBLESHOOTING.md
docs/superpowers/specs/: 2026-04-21-s3-auto-ingest-design.md
embeddings/: lambda_embed.py
graphify/: INDEX.md  agents.md  architecture.md  dataflow.md  decisions.md  glossary.md  graph.json
graphify/modules/: api-agent.md  api-config.md  api-dependencies.md  api-logger.md  api-main.md  api-observability.md  api-rate_limit.md  api-retriever.md  api-schemas.md  embeddings-lambda_embed.md  ingestion-chunker.md  ingestion-lambda_parser.md  ingestion-lambda_s3.md  ingestion-lambda_webhook.md  ingestion-logging_util.md  ingestion-models.md  ingestion-parser.md  scripts-backfill_s3_to_pinecone.md  scripts-demo.md  scripts-graphify.md  scripts-preflight.md  scripts-setup_aws.md  scripts-setup_pinecone.md  scripts-triage_queue.md  scripts-validate_env.md  scripts-verify_end_to_end.md  scripts-verify_pinecone.md  scripts-verify_retrieval.md
infra/terraform/: README.md  backend.example.hcl  lambdas.tf  main.tf  outputs.tf  variables.tf
ingestion/: chunker.py  lambda_parser.py  lambda_s3.py  lambda_webhook.py  logging_util.py  models.py  parser.py
poc/: README.md  poc_runner.py
scripts/: backfill_s3_to_pinecone.py  demo.py  graphify.py  pre-commit-hook.sh  preflight.py  setup_aws.py  setup_pinecone.py  triage_queue.py  validate_env.py  verify_end_to_end.py  verify_pinecone.py  verify_retrieval.py
scripts/sample_data/: sample.csv  sample.txt
tasks/: lessons.md  todo.md
tests/: test_api.py  test_embedding.py  test_infra_static.py  test_ingestion.py  test_observability.py  test_rag.py  test_rate_limit.py  test_retriever_mmr.py  test_verify_pinecone.py  test_webhook.py
