[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vecturaflow"
version = "1.0.0"
description = "Autonomous agentic RAG data platform on AWS"
authors = [{ name = "Jagadeesh Pamidi", email = "jagadeesh6187@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
keywords = ["rag", "llm", "ai", "aws", "pinecone", "langchain", "fastapi"]

[project.urls]
Repository = "https://github.com/jagadeesh6187/VecturaFlow"

# ─────────────────────────────────────────────────────────────────────────────
# Package discovery — tells Python where modules live
# ─────────────────────────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "ingestion*", "embeddings*"]
exclude = ["tests*", "poc*", "scripts*", "docs*", "infra*"]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff — linting + formatting (replaces flake8, isort, black)
# ─────────────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "build",
    "dist",
    "poc",          # POC code has relaxed standards
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "ANN",  # flake8-annotations (type hints enforced)
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
]
ignore = [
    "ANN401",   # dynamically typed expressions (Any) — needed for boto3
    "B008",     # do not perform function calls in default arguments (FastAPI Depends)
    "E501",     # line too long — ruff formatter handles this
    "UP017",    # datetime.UTC is 3.11+; we use timezone.utc for 3.10 compat
]

[tool.ruff.lint.isort]
known-first-party = ["api", "ingestion", "embeddings"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101"]  # no type hints required in tests, assert is fine
"scripts/*" = ["ANN", "T201"] # no type hints or print() warnings in scripts
"poc/*" = ["ANN", "T201", "B", "SIM"]  # relaxed for POC code

# ─────────────────────────────────────────────────────────────────────────────
# Pytest
# ─────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=api",
    "--cov=ingestion",
    "--cov=embeddings",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]
filterwarnings = [
    "ignore::DeprecationWarning:moto",
    "ignore::DeprecationWarning:botocore",
]

# ─────────────────────────────────────────────────────────────────────────────
# Coverage
# ─────────────────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["api", "ingestion", "embeddings"]
omit = [
    "tests/*",
    "poc/*",
    "scripts/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true
fail_under = 70

# ─────────────────────────────────────────────────────────────────────────────
# MyPy (optional — run with: mypy api/ ingestion/)
# ─────────────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["poc/", "scripts/", "tests/"]
